# CSVtoPZFX

./: AL_05.24.22_GLuc_RLuc.csv  AL_05.24.22_GLuc_RLuc.pzfx  README.md  csv_processing.py  gLuc timelapse_6019.csv  gLuc timelapse_6019.pzfx  main.py  pyproject.toml  pzfx_processing.py
