[tool.poetry]
name = "CSVtoPZFX"
version = "0.1.0"
description = "A CSV to PZFX file converter"
authors = ["Dmitrii Golubenko <d.golubenko@knights.ucf.edu>"]
license = "MIT License"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
